<resources>
    <string name="app_name">Base</string>
    <string name="chat_chat"> Chat</string>
    <string name="chat_friends"> Friends </string>
    <string name="chat_recording"> Recording</string>
    <string name="chat_slide_up_cancel_send"> Slide up to cancel the send </string>
    <string name="chat_up_cancel_send"> Loosen finger to cancel the send </string>
    <string name="chat_release_send"> Release to send immediately </string>
    <string name="chat_in_forbid"> In forbid </string>
    <string name="chat_type_image">[ Picture ]</string>
    <string name="chat_type_voice">[ Voice ]</string>
    <string name="chat_type_video">[ Video ]</string>
    <string name="chat_type_location">[ Location]</string>
    <string name="chat_type_file">[ File ]</string>
    <string name="chat_type_red_package">[ Red package ]</string>
    <string name="chat_type_new_member_red_package">[Red package for new member ]</string>
    <string name="chat_type_transfer">[ Transfer ]</string>
    <string name="chat_type_personal_profile">[ Personal profile ]</string>
    <string name="chat_start_group_chat"> Start group chat </string>
    <string name="chat_help_feedback"> Help and feedback </string>
    <string name="chat_my_collection">My collection</string>
    <string name="chat_search_contact"> Search contact </string>
    <string name="chat_search_contact_record">Search contact/chat record</string>
    <string name="chat_new_friend"> New friend </string>
    <string name="chat_label"> Label </string>
    <string name="chat_my_chat_groups"> My chat groups </string>
    <string name="chat_star_friends"> Star friends </string>
    <string name="chat_contact"> Contact </string>
    <string name="chat_search_xxx"> Search%1$s</string>
    <string name="chat_search">Search</string>
    <string name="chat_all_labels"> All labels </string>
    <string name="chat_create"> Create</string>
    <string name="chat_no_label"> No label </string>
    <string name="chat_add_label_speard_friends"> You could classify the friends by their labels </string>
    <string name="chat_create_label"> Create label </string>
    <string name="chat_select_friend"> Select contact </string>
    <string name="chat_ok_1"> OK (%1$s)</string>
    <string name="chat_edit_label"> Edit label </string>
    <string name="chat_edit"> Edit </string>
    <string name="chat_save"> Save </string>
    <string name="chat_label_name"> Label name </string>
    <string name="chat_label_example"> For example, families, friends </string>
    <string name="chat_label_member"> Member </string>
    <string name="chat_delete_label"> Delete label </string>
    <string name="chat_save_as_label"> Save as label </string>
    <string name="chat_add_memo"> Add remark  </string>
    <string name="chat_friend_memo"> Friend remark </string>
    <string name="chat_more_info"> More information </string>
    <string name="chat_send_msg"> Send message </string>
    <string name="chat_send"> Send </string>
    <string name="chat_location_info"> Location information </string>
    <string name="chat_install_file_selector"> Please install a file selector </string>
    <string name="chat_please_select_a_file"> Please select a file </string>
    <string name="chat_file_max_size"> The max size of the file shall be no more than 15M </string>
    <string name="chat_group_chat"> Group chat</string>
    <string name="chat_download"> Download </string>
    <string name="chat_open_file"> Open by other application  </string>
    <string name="chat_group_name"> Name of chat group </string>
    <string name="chat_choose_a_group"> Select a group </string>
    <string name="chat_are_you_sure_send_msg"> Are you sure to send the message to this group or this contact? </string>
    <string name="chat_take_photo"> Take photo </string>
    <string name="chat_album"> Album  </string>
    <string name="chat_select_photo"> Picture </string>
    <string name="chat_select_video"> Video </string>
    <string name="chat_video"> Short video </string>
    <string name="chat_my_location"> My location </string>
    <string name="chat_leave_msg"> Message </string>
    <string name="chat_red_package"> Red package </string>
    <string name="chat_transfer"> Transfer </string>
    <string name="chat_file"> File </string>
    <string name="chat_area_switch">Switch region</string>
    <string name="chat_record_time_too_short"> The record time is too short </string>
    <string name="chat_service">Service</string>
    <string name="chat_cancel_record"> Swipe up to cancel recording </string>
    <string name="chat_add_friend_first_said"> I accept your friend application and now we could start to chat now </string>
    <string name="chat_set_delete_msg_time"> Set time for deleting message </string>
    <string name="chat_add_friend"> Add friends </string>
    <string name="chat_my_id"> My ID：%1$s</string>
    <string name="chat_id_phone_email">ID No./Account No. Phone Number/Email </string>
    <string name="chat_scan"> Scan </string>
    <string name="chat_scan_qrcode"> Scan QR Code Profile </string>
    <string name="chat_phone_contact"> Phone Contact </string>
    <string name="chat_add_or_invate_contact"> Add or invite friends in the phone contact list </string>
    <string name="chat_add_remark"> Add remark  </string>
    <string name="chat_remarh_cannot_empty"> Remark can not be empty </string>
    <string name="chat_done"> Finish  </string>
    <string name="chat_accept"> Accept </string>
    <string name="chat_had_expire"> Expired </string>
    <string name="chat_had_added"> Added </string>
    <string name="chat_you_need_send_verify_apply"> You shall send the verification application for approval  </string>
    <string name="chat_add_friend_remark"> Add remarks for friends </string>
    <string name="chat_i_am"> I am %1$s</string>
    <string name="chat_accespt"> Accept</string>
    <string name="chat_add"> Add</string>
    <string name="chat_had_add"> Added </string>
    <string name="chat_request_you_as_friend"> Request to add you as friends </string>
    <string name="chat_search_location">Search for a location</string>
    <string name="chat_copy"> Copy </string>
    <string name="chat_send_to_friend"> Send to the friends </string>
    <string name="chat_muti_choose"> Multiple choose </string>
    <string name="chat_translate"> Translate </string>
    <string name="chat_translate_failed"> Translate failure, please try again latter  </string>
    <string name="chat_delete"> Delete </string>
    <string name="chat_collect">Collect</string>
    <string name="chat_collect_success">Collect success</string>
    <string name="chat_delete_msg"> Delete message </string>
    <string name="chat_delete_msg_tip_1"> Are you sure to delete this message? It is unrecoverable </string>
    <string name="chat_delete_msg_tip_2"> Simultaneously delete friends’ message </string>
    <string name="chat_delete_msg_tip_3"> Simultaneously delete the message recorded in chat group </string>
    <string name="chat_qr_code"> QR Code profile </string>
    <string name="chat_group_qr_code"> QR Code profile of chat group</string>
    <string name="chat_save_qrcode"> Save QR Code to phone </string>
    <string name="chat_group_member_num"> The number of this chat group: %1$s</string>
    <string name="chat_personal_profile"> Personal profile </string>
    <string name="chat_red_package_record"> Red package record </string>
    <string name="chat_xxx_red_package">%1$s red package </string>
    <string name="chat_red_package_had_get">%1$s red packages has been draw </string>
    <string name="chat_get_max_red_package"> Get the max red package </string>
    <string name="chat_all_red_package_had_get"> All red packages have been draw </string>
    <string name="chat_send_red_package"> Red package </string>
    <string name="chat_quantity"> Quantity </string>
    <string name="chat_please_input_quantity"> Please input quantity </string>
    <string name="chat_please_input_num"> Please input number </string>
    <string name="chat_red_package_limit"> Single red package could not exceed 200 and the service charge is 5% </string>
    <string name="chat_red_package_quantity_tip"> Single red package could not exceed 200</string>
    <string name="chat_alsc">UTG</string>
    <string name="chat_red_package_remark"> Remark statement </string>
    <string name="chat_send_red_package_2"> Send red package </string>
    <string name="chat_pay_password"> Payment password </string>
    <string name="chat_money_package"> Asset package  </string>
    <string name="chat_please_input_pay_password"> Please input payment password </string>
    <string name="chat_please_make_sure_send_red_package">Are you sure red package?</string>
    <string name="chat_look_red_package"> View red package </string>
    <string name="chat_open_red_package"> Open immediately </string>
    <string name="chat_all_red_package_had_complete"> All red packages have been draw </string>
    <string name="chat_red_package_had_expire"> Red package has been expired  </string>
    <string name="chat_red_package_default_remark"> May you be happy and prosperous  </string>
    <string name="chat_transfer_to_xxx"> Transfer to %1$s</string>
    <string name="chat_you"> You </string>
    <string name="chat_xxx_invite_xxx_add_group">%1$s invite %2$s to join chat group </string>
    <string name="chat_xxx_remove_from_group">%1$s is removed from chat group </string>
    <string name="chat_xxx_in_group_by_qrcode">%1$s join chat group through scanning QR Code </string>
    <string name="chat_all_forbid_chat"> Forbid all chat </string>
    <string name="chat_group_ower_update_group_name"> Group owner change the name of chat group </string>
    <string name="chat_group_ower_update_group_notice"> Group owner change the chat group announcement </string>
    <string name="chat_change_to_common"> Change it into common red package </string>
    <string name="chat_change_to_random"> Change it into random red package </string>
    <string name="chat_red_package_num"> Number of red package </string>
    <string name="chat_red_package_rest_num"> Number of left red package </string>
    <string name="chat_xxx_num"> Number </string>
    <string name="chat_member_num"> There is %1$s person in this chat group </string>
    <string name="chat_alsc_ask">UTG</string>
    <string name="chat_had_get_red_pacage"> Has draw red package </string>
    <string name="chat_peer_had_get_red_pacage"> Peer has draw the red package </string>
    <string name="chat_new_member_red_package_setting"> New member red package setting</string>
    <string name="chat_enter_group_way"> Method to join chat group </string>
    <string name="chat_forbid_chat_manager"> Forbid chat management</string>
    <string name="chat_forbid_add_friend"> Forbid adding friends with each other</string>
    <string name="chat_forbid_send_url"> Forbid sending URL</string>
    <string name="chat_give_group_to_other"> Chat group transfer</string>
    <string name="chat_xxx_alsc">%1$s UTG</string>
    <string name="chat_transfer_time"> Transfer time: %1$s</string>
    <string name="chat_receive_money_time"> Collection time: ：%1$s</string>
    <string name="chat_sure_get_money_2"> Confirm to receive money </string>
    <string name="chat_transfer_success"> Transfer successfully </string>
    <string name="chat_had_save_in_peer_wallet"> Have been save to peer’s asset wallet </string>
    <string name="chat_add_to_label"> Add label</string>
    <string name="chat_recommend_to_friend"> Recommend TA to your friends </string>
    <string name="chat_set_to_star_friend"> Set as star friend </string>
    <string name="chat_add_to_black_list"> Add to the blacklist </string>
    <string name="chat_delete_contact"> Delete contact </string>
    <string name="chat_msg_filter"> Message filter </string>
    <string name="chat_end_group">Disband</string>
</resources>