<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f3_f7_fa"
    android:orientation="vertical">

    <include layout="@layout/layout_top_bar" />

    <TextView
        android:id="@+id/tvNewMemberRedPackage"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@color/color_ff_ff_ff"
        android:drawableRight="@drawable/icon_right_arrow"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/chat_new_member_red_package_setting"
        android:textColor="@color/color_00_00_00"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/tvEnterGroupWay"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="0.5dp"
        android:background="@color/color_ff_ff_ff"
        android:drawableRight="@drawable/icon_right_arrow"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/chat_enter_group_way"
        android:textColor="@color/color_00_00_00"
        android:textSize="15dp" />


    <TextView
        android:id="@+id/tvMsgFilter"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="0.5dp"
        android:background="@color/color_ff_ff_ff"
        android:drawableRight="@drawable/icon_right_arrow"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/chat_msg_filter"
        android:textColor="@color/color_00_00_00"
        android:textSize="15dp" />

    <LinearLayout
        android:id="@+id/llAllForbidChat"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@color/color_ff_ff_ff"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/chat_all_forbid_chat"
            android:textColor="@color/color_00_00_00"
            android:textSize="15dp" />

        <ImageView
            android:id="@+id/ivAllForbidChatSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/icon_switch_off" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvForbidChatManager"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="0.5dp"
        android:background="@color/color_ff_ff_ff"
        android:drawableRight="@drawable/icon_right_arrow"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/chat_forbid_chat_manager"
        android:textColor="@color/color_00_00_00"
        android:textSize="15dp" />

    <LinearLayout
        android:id="@+id/llForbidAddFriend"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="0.5dp"
        android:background="@color/color_ff_ff_ff"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/chat_forbid_add_friend"
            android:textColor="@color/color_00_00_00"
            android:textSize="15dp" />

        <ImageView
            android:id="@+id/ivForbidAddFriendSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/icon_switch_off" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llForbidSendUrl"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="0.5dp"
        android:background="@color/color_ff_ff_ff"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/chat_forbid_send_url"
            android:textColor="@color/color_00_00_00"
            android:textSize="15dp" />

        <ImageView
            android:id="@+id/ivForbidSendUrlSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/icon_switch_off" />

    </LinearLayout>


    <TextView
        android:id="@+id/tvGroupGive"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@color/color_ff_ff_ff"
        android:drawableRight="@drawable/icon_right_arrow"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/chat_give_group_to_other"
        android:textColor="@color/color_00_00_00"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/tvEndGroup"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@color/color_ff_ff_ff"
        android:gravity="center"
        android:text="@string/chat_end_group"
        android:textColor="@color/color_f4_61_61"
        android:textSize="15dp" />


</LinearLayout>